kubernetes/admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: ambassador-admin
  name: ambassador-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ambassador-admin
  template:
    metadata:
      labels:
        io.kompose.service: ambassador-admin
    spec:
      containers:
        - env:
            - name: DB_HOST
              valueFrom:
                secretKeyRef:
                  name: db-secrets
                  key: DB_HOST
            - name: DB_PORT
              value: "3306"
            - name: DB_USERNAME
              valueFrom:
                secretKeyRef:
                  name: db-secrets
                  key: DB_USERNAME
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: db-secrets
                  key: DB_PASSWORD
            - name: REDIS_HOST
              valueFrom:
                secretKeyRef:
                  name: redis-secrets
                  key: REDIS_HOST
            - name: REDIS_PORT
              value: "6379"
            - name: JWT_SECRET
              valueFrom:
                secretKeyRef:
                  name: jwt-secrets
                  key: JWT_SECRET
          image: region-docker.pkg.dev/project-id/ambassador-microservices/admin:1.0
          name: ambassador-admin
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: ambassador-admin
  name: ambassador-admin
spec:
  selector:
    io.kompose.service: ambassador-admin
  ports:
    - name: "8002"
      port: 8002
      targetPort: 8000
